# omi-regolo-integration

./: .gitignore  .gitlab-ci.yml  README.md  SESSION-REPORT-2026-04-27.md
backend/: test.sh
backend-rust/: .env.example
backend-rust/src/: main.rs
backend/database/: users.py
backend/routers/: users.py
backend/tests/unit/: test_byok_security.py  test_regolo_provider.py
backend/utils/llm/: clients.py  eu_privacy.py
desktop/: CHANGELOG.json
desktop/Desktop/Sources/: APIKeyService.swift  BYOKValidator.swift
desktop/docs/: M1-deliver-report.md  M1-gap-audit.md  M2-embedding-audit.md  M2.5-implementation-runbook.md  M2.5-upstream-omi-pr-template.md  M4-M2.5-security-verification.md  M6-WP01-backend-rust-audit.md  M6-WP06-wgc-capture-only-spike.md  M6-WP07prime-backend-rust-windows-build.md  M6-WP12-audio-capture-spike.md  M6-WP13-wgc-per-window-spike.md  M6-WP15-keyring-byok-spike.md  M6-debate-transcript.md  M6-execution-WBS.md  M6-windows-port-decisions.md  REGOLO_INTEGRATION.md
docs/: 01-discover-synthesis.md  02-define-plan.md  03-deliver-report.md  04-model-mapping.md
windows/: package-lock.json  package.json
windows/src/: App.tsx
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/src/: lib.rs  main.rs
